# internal/api/user_self_router.go
@@ -6,11 +6,6 @@ import (
 
 	reqresp "github.com/CakeForKit/CraftPlace.git/internal/models/req_resp"
 	userrep "github.com/CakeForKit/CraftPlace.git/internal/repository/user_rep"
-	auth "github.com/CakeForKit/CraftPlace.git/internal/services/auth/authZ"
-	postservice "github.com/CakeForKit/CraftPlace.git/internal/services/post_service"
-	productservice "github.com/CakeForKit/CraftPlace.git/internal/services/product_service"
-	"github.com/CakeForKit/CraftPlace.git/internal/services/searcher"
-	shopservice "github.com/CakeForKit/CraftPlace.git/internal/services/shop_service"
 	userselfservice "github.com/CakeForKit/CraftPlace.git/internal/services/user_self_service"
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
@@ -18,29 +13,18 @@ import (
 
 type UserSelfRouter struct {
 	userSelfServ userselfservice.UserSelfServ
-	authz        auth.AuthZ
-	searcherServ searcher.Searcher
-	shopServ     shopservice.ShopServ
-	productServ  productservice.ProductServ
-	postServ     postservice.PostServ
+}
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"error message"`
 }
 
 func NewUserSelfRouter(
 	router *gin.RouterGroup,
 	userSelfServ userselfservice.UserSelfServ,
-	authz auth.AuthZ,
-	searcherServ searcher.Searcher,
-	shopServ shopservice.ShopServ,
-	productServ productservice.ProductServ,
-	postServ postservice.PostServ,
 ) UserSelfRouter {
 	r := UserSelfRouter{
 		userSelfServ: userSelfServ,
-		authz:        authz,
-		searcherServ: searcherServ,
-		shopServ:     shopServ,
-		productServ:  productServ,
-		postServ:     postServ,
 	}
 	gr := router.Group("/users")
 	gr.GET("/:id_user", r.GetUserByID)
@@ -59,9 +43,10 @@ func NewUserSelfRouter(
 // @Param Authorization header string true "Bearer токен"
 // @Param id_user path string true "ID пользователя" format(uuid)
 // @Success 200 {object} reqresp.UserResponse "Информация о пользователе"
-// @Failure 400 {object} map[string]interface{} "Неверный формат ID пользователя"
-// @Failure 404 {object} map[string]interface{} "Пользователь не найден"
-// @Failure 500 {object} map[string]interface{} "Внутренняя ошибка сервера"
+// @Failure 400 {object} ErrorResponse  "Неверный формат ID пользователя, или неверный ID пользователя"
+// @Failure 401 {object} ErrorResponse  "Неавторизованный доступ"
+// @Failure 404 {object} ErrorResponse  "Пользователь не найден"
+// @Failure 500 {object} ErrorResponse  "Внутренняя ошибка сервера"
 // @Router /users/{id_user} [get]
 func (r *UserSelfRouter) GetUserByID(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -74,6 +59,8 @@ func (r *UserSelfRouter) GetUserByID(c *gin.Context) {
 	if err != nil {
 		if errors.Is(err, userrep.ErrUserNotFound) {
 			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		} else if errors.Is(err, userselfservice.ErrUserIDInCtx) {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		} else {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		}
@@ -92,7 +79,12 @@ func (r *UserSelfRouter) GetUserByID(c *gin.Context) {
 // @Param Authorization header string true "Bearer токен"
 // @Param id_user path string true "ID пользователя" format(uuid)
 // @Param request body reqresp.UpdateLoginRequest true "Данные для обновления логина"
-// @Success 200 {object} map[string]interface{} "Успешное обновление"
+// @Success 200  "Успешное обновление"
+// @Failure 400 {object} ErrorResponse  "Неверный формат ID, неверные данные запроса, неверный пользователь"
+// @Failure 401 {object} ErrorResponse  "Неавторизованный доступ"
+// @Failure 404 {object} ErrorResponse  "Пользователь не найден"
+// @Failure 409 {object} ErrorResponse  "Логин уже занят"
+// @Failure 500 {object} ErrorResponse  "Внутренняя ошибка сервера"
 // @Router /users/{id_user}/login [patch]
 func (r *UserSelfRouter) UpdateLogin(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -110,8 +102,10 @@ func (r *UserSelfRouter) UpdateLogin(c *gin.Context) {
 
 	newLogin := req.Login
 	if err := r.userSelfServ.ChangeLogin(ctx, userID, newLogin); err != nil {
-		if errors.Is(err, auth.ErrNotAuthZ) {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		if errors.Is(err, userrep.ErrUserNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		} else if errors.Is(err, userselfservice.ErrUserIDInCtx) {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		} else {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		}
@@ -130,7 +124,11 @@ func (r *UserSelfRouter) UpdateLogin(c *gin.Context) {
 // @Param Authorization header string true "Bearer токен"
 // @Param id_user path string true "ID пользователя" format(uuid)
 // @Param request body reqresp.UpdateUserPasswordRequest true "Данные для обновления пароля"
-// @Success 200 {object} map[string]interface{} "Успешное обновление"
+// @Success 200 "Успешное обновление"
+// @Failure 400 {object} ErrorResponse  "Неверный формат ID, неверные данные запроса, неверный пользователь"
+// @Failure 401 {object} ErrorResponse  "Неавторизованный доступ"
+// @Failure 404 {object} ErrorResponse  "Пользователь не найден"
+// @Failure 500 {object} ErrorResponse  "Внутренняя ошибка сервера"
 // @Router /users/{id_user}/password [patch]
 func (r *UserSelfRouter) UpdatePassword(c *gin.Context) {
 	ctx := c.Request.Context()
@@ -148,8 +146,10 @@ func (r *UserSelfRouter) UpdatePassword(c *gin.Context) {
 
 	newPassword := req.Password
 	if err := r.userSelfServ.ChangePassword(ctx, userID, newPassword); err != nil {
-		if errors.Is(err, auth.ErrNotAuthZ) {
-			c.JSON(http.StatusUnauthorized, gin.H{"error": err.Error()})
+		if errors.Is(err, userrep.ErrUserNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		} else if errors.Is(err, userselfservice.ErrUserIDInCtx) {
+			c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		} else {
 			c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		}
